src/components/NewItem/styles.css
.NewItem-container {
    display: flex;
    width: 100%;
    border-radius: 6px;
    border: solid 1px rgba(151, 151, 151, 0.8);
    background-color: #fff;
}

.NewItem-container:hover {
    opacity: 0.5;
}

.NewItem-info-container {
    width: 85%;
    display: flex;
    flex-direction: column;
    padding: 20px;
}

.Fave-container {
    width: 10%;
    min-width: 68px;
    height: auto;
    border-radius: 6px;
    border: solid 1px rgba(96, 96, 96, 0.06);
    background-color: rgba(96, 96, 96, 0.06);
    display: flex;
    justify-content: center;
    align-items: center;
}

.Hearth-icon {
    width: 24px;
    height: 22px;
    object-fit: contain;
    background-image: url("/public/hearth-icon.svg");
}

.Hearth-icon-active {
    width: 24px;
    height: 22px;
    object-fit: contain;
    background-image: url("/public/hearth-icon-active.svg");
}

.Hearth-icon:hover {
    background-image: url("/public/hearth-icon-active.svg");
}

.Date-info-container {
    display: flex;
    align-items: center;
}

.Date-text {
    font-size: 11px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    color: #767676;
    padding-bottom: 4px;
}

.Info-text {
    font-size: 14px;
    font-weight: 500;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.43;
    letter-spacing: 0.25px;
    color: #606060;
}

.Clock-icon {
    width: 16px;
    height: 16px;
    margin: 0 8px 6px 0;
    object-fit: contain;
}

